--- a/components/java-quarkus-wssmutor/overlays/development/deployment-patch.yaml
+++ b/components/java-quarkus-wssmutor/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: java-quarkus-wssmutor
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-tssc/task-runner:1.7
-        name: container-image  
+        - image: quay.io/sjmrhtap/java-quarkus-wssmutor:d233a4098fc2f99dec53e625bf5191dda22dc7ae@sha256:c9bc7f32042246ecdac36f047acbc67edc41b18e9a5ec5d36b58168fbfc89d6c
+          name: container-image
